Fix comment lines overlapping each other

--- a/src/styles/PlaceDetailsModal.css
+++ b/src/styles/PlaceDetailsModal.css
@@ -475,7 +475,7 @@ a {
   padding: 0.8rem 1.2rem;
   background: var(--background-details);
   border-radius: 1.15rem;
-  min-width: 170px;
+  min-width: 300px;
 }
 
 .comment__author {
